[package]
name = "dlrs-core"
version = "1.0.0"
edition = "2021"
authors = ["xkk"]
description = "Distributed Low-Rank Space — ZK-shared private matrices & programmable DNA seeds"
license = "MIT"
repository = "https://github.com/xkk/dlrs"
keywords = ["zero-knowledge", "low-rank", "distributed", "privacy", "matrix"]
categories = ["cryptography", "science"]

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "dlrs"
path = "src/bin/dlrs.rs"

[dependencies]
nalgebra = { version = "0.33", features = ["serde-serialize", "rand"] }
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
hex = "0.4"
thiserror = "2"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
env_logger = "0.11"

# ZK proving (using arkworks ecosystem)
ark-ff = "0.5"
ark-ec = "0.5"
ark-bn254 = "0.5"
ark-groth16 = "0.5"
ark-relations = "0.5"
ark-serialize = "0.5"
ark-std = "0.5"

# Networking
libp2p = { version = "0.54", features = ["gossipsub", "mdns", "noise", "tcp", "yamux", "tokio", "macros"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# WASM support
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console"] }

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "factorization"
harness = false
